--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scc-app-download-page",
+  "private": true,
   "version": "1.0.0",
-  "description": "세종충북도박문제예방치유센터 애플리케이션 다운로드 페이지",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,9 +13,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^5.0.0"
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.0.8"
   }
 }
+
